Fix header z-index issue in UI.
The z-index of the header was set to 2000 because of Leaflet JS zoom
controls going over the header instead of under when scrolling. However,
this caused issues with the notifications and dropdowns (menu and
autocomplete).

Setting the z-index to 1001 is enough to fix the Leaflet JS issues,
without causing other issues.

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,7 +1,3 @@
-.ant-notification {
-	z-index: 3000;
-}
-
 .layout {
   margin-left: 300px;
 }
@@ -9,7 +5,8 @@
 .layout-header {
   background: #ffffff;
   box-shadow: 0px 0px 10px 0px #ccc;
-  z-index: 2000;
+  /* Leaflet JS zoom controls have z-index 1000. */
+  z-index: 1001;
 
   position: fixed;
   width: 100%;
